# IFred

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
config/: kernel.json.in
source/: main.cpp
source/interpreter/: interpreter.cpp  interpreter.hpp
